test/errors/indexed_offsets_error/zs/relational_operator_in_array_expression_error.zs
package relational_operator_in_array_expression_error;

struct RelationalOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index > 0]:
    string fields[];
};
